k8s/web/httpbin-mengxin-ml-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: httpbin-mengxin-ml-deployment
    namespace: web
    labels:
        app: httpbin
        type: pod
spec:
    replicas: 1
    selector:
        matchLabels:
            app: httpbin-mengxin-ml
    template:
        metadata:
            labels:
                app: httpbin-mengxin-ml
        spec:
            containers:
                - name: httpbin-mengxin-ml
                  image: kennethreitz/httpbin
                  ports:
                      - name: http
                        containerPort: 80
