k8s/web/sea-mengxin-ml-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sea-mengxin-ml-deployment
  namespace: web
spec:
  selector:
    matchLabels:
      app: sea-mengxin-ml
  replicas: 1
  template:
    metadata:
      labels:
        app: sea-mengxin-ml
    spec:
      containers:
        - name: sea-mengxin-ml
          image: mengxin891029/sea-mengxin-ml
          ports:
            - name: http
              containerPort: 80
