k8s/web/tunnel-mengxin-ml-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tunnel-mengxin-ml-deployment
  namespace: web
  labels:
    app: tunnel
    hostname: tunnel.mengxin.ml
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: tunnel-mengxin-ml
  template:
    metadata:
      labels:
        pod: tunnel-mengxin-ml
    spec:
      containers:
        - name: tunnel-mengxin-ml
          image: mengxin891029/tunnel-mengxin-ml
          ports:
            - name: http
              containerPort: 80
