k8s/web/httpbin-mengxin-ml-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-mengxin-ml-clusterip
  namespace: web
spec:
  selector:
    app: httpbin-mengxin-ml
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
