k8s/web/tunnel-mengxin-ml-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: tunnel-mengxin-ml-clusterip
  namespace: web
spec:
  selector:
    pod: tunnel-mengxin-ml
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
