k8s/web/ingress-controller.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: mengxin-asia-southeast1-k8s-ingress-service
    namespace: web
    annotations:
        kubernetes.io/ingress.class: nginx
        # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
        # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
        nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
    tls:
        - hosts:
              - sea.mengxin.ml
              - httpbin.mengxin.ml
              - mengxin.ml
              - www.mengxin.ml
          secretName: mengxin-ml-cert
    rules:
        - host: sea.mengxin.ml
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: sea-mengxin-ml-clusterip
                        servicePort: 80
        - host: www.mengxin.ml
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: sea-mengxin-ml-clusterip
                        servicePort: 80
        - host: mengxin.ml
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: sea-mengxin-ml-clusterip
                        servicePort: 80
        - host: httpbin.mengxin.ml
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: httpbin-mengxin-ml-clusterip
                        servicePort: 80
